# adventofcode2021

./: Cargo.toml  README.md
aoclib/src/: lib.rs
day-01-sonar-sweep/part-2/src/: main.rs
day-01/part-1/: Cargo.toml
day-01/part-1/src/: main.rs
day-01/part-2/: Cargo.toml
day-02-dive/part-2/: Cargo.toml
day-02/part-1/: Cargo.toml
day-02/part-1/src/: main.rs
day-02/part-2/src/: main.rs
day-03-binary-diagnostic/part-1/src/: main.rs
day-03-binary-diagnostic/part-2/: Cargo.toml
day-03/part-1/: Cargo.toml
day-03/part-2/src/: main.rs
day-04-giant-squid/part-1/: Cargo.toml
day-04/part-1/src/: main.rs
day-04/part-2/: Cargo.toml
day-04/part-2/src/: main.rs
day-05/: Cargo.toml
day-05-hydrothermal-venture/idiomatic/: Cargo.toml
day-05/short/: Cargo.toml
day-05/short/src/: main.rs
day-05/src/: main.rs
day-06-lanternfish/part-2/: Cargo.toml
day-06/part-1/: Cargo.toml
day-06/part-1/src/: main.rs
day-06/part-2/src/: main.rs
day-07-the-treachery-of-whales/part-1/src/: main.rs
day-07-the-treachery-of-whales/part-2/src/: main.rs
day-07/part-1/: Cargo.toml
day-07/part-1/src/: main.rs
day-07/part-2/: Cargo.toml
day-07/part-2/src/: main.rs
day-08-seven-segment-search/part-2/: Cargo.toml
day-08-seven-segment-search/part-2-no-bruteforce/src/: main.rs
day-08/part-1/: Cargo.toml
day-08/part-1/src/: main.rs
day-08/part-2-no-bruteforce/: Cargo.toml
day-08/part-2-no-bruteforce/src/: main.rs
day-08/part-2/src/: .main.rs.swp  main.rs
day-09-smoke-basin/part-1/: Cargo.toml
day-09/part-1/src/: main.rs
day-09/part-2/: Cargo.toml
day-10-syntax-scoring/part-1/: Cargo.toml
day-10-syntax-scoring/part-2/: Cargo.toml
day-10/part-2-golf/: Cargo.toml  README.md
day-11-dumbo-octopus/: Cargo.toml
day-11-dumbo-octopus/src/: main.rs
day-11/src/: main.rs
day-12/: Cargo.toml
day-12-passage-pathing/golf/: Cargo.toml
day-12/idiomatic/: Cargo.toml
day-12/src/: main.rs
day-13/: Cargo.toml
day-13-transparent-origami/golf/: Cargo.toml
day-13/idiomatic/: Cargo.toml
day-13/src/: main.rs
day-14-xtended-polymerization/: Cargo.toml
day-14/src/: main.rs
day-15/: Cargo.toml
day-15-chiton/golf/: Cargo.toml
day-15/golf/: Cargo.toml
day-15/idiomatic/: Cargo.toml
day-15/src/: .main.rs.swp  main.rs
day-16/: Cargo.toml
day-16-packet-decoder/src/: main.rs
day-16/src/: main.rs
day-17-trick-shot/part-2/: Cargo.toml
day-17/part-1/: Cargo.toml
day-18/: Cargo.toml
day-18-snailfish/src/: main.rs
day-19/: Cargo.toml
day-19-beacon-scanner/: Cargo.toml  README.md
day-19/src/: main.rs
day-20-trench-map/: Cargo.toml
day-20/src/: main.rs
day-21/: Cargo.toml
day-21-dirac-dice/src/: main.rs
day-22-reactor-reboot/: Cargo.toml
day-22/src/: main.rs
day-23/: Cargo.toml
day-23/src/: main.rs
day-24/: Cargo.toml  README.md
day-24-arithmetic-logic-unit/part-1/: Cargo.toml
day-24-arithmetic-logic-unit/part-2/: Cargo.toml  README.md
day-24/part-1/: README.md
day-25-sea-cucumber/: Cargo.toml
day-25/src/: main.rs
(+15 files in other folders)
