[workspace]
members = [
  "aoclib",
  "day-01/part-1",
  "day-01/part-2",
  "day-02/part-1",
  "day-02/part-2",
  "day-03/part-1",
  "day-03/part-2",
  "day-04/part-1",
  "day-04/part-2",
  "day-05/idiomatic",
  "day-05/short",
  "day-06/part-1",
  "day-06/part-2",
  "day-07/part-1",
  "day-07/part-2",
  "day-07/part-1",
  "day-08/part-1",
  "day-08/part-2",
  "day-08/part-2-no-bruteforce",
  "day-09/part-1",
  "day-09/part-2",
  "day-10/part-1",
  "day-10/part-2",
  "day-10/part-2-golf",
  "day-11",
  "day-12/idiomatic",
  "day-12/golf",
  "day-13/idiomatic",
  "day-13/golf",
  "day-14",
  "day-15/idiomatic",
  "day-15/golf",
  "day-16",
  "day-17/part-1",
  "day-17/part-2",
  "day-18",
  "day-19",
  "day-20",
  "day-21",
  "day-22",
  "day-23",
  "day-24/part-1",
  "day-24/part-2",
]

[profile.release]
lto = "fat"
codegen-units = 1
