[workspace]
members = [
  "day-01-sonar-sweep/part-1",
  "day-01-sonar-sweep/part-2",
  "day-02-dive/part-1",
  "day-02-dive/part-2",
  "day-03-binary-diagnostic/part-1",
  "day-03-binary-diagnostic/part-2",
  "day-04-giant-squid/part-1",
  "day-04-giant-squid/part-2",
  "day-05-hydrothermal-venture/idiomatic",
  "day-05-hydrothermal-venture/short",
  "day-06-lanternfish/part-1",
  "day-06-lanternfish/part-2",
  "day-07-the-treachery-of-whales/part-1",
  "day-07-the-treachery-of-whales/part-2",
  "day-08-seven-segment-search/part-1",
  "day-08-seven-segment-search/part-2",
  "day-08-seven-segment-search/part-2-no-bruteforce",
  "day-09-smoke-basin/part-1",
  "day-09-smoke-basin/part-2",
  "day-10-syntax-scoring/part-1",
  "day-10-syntax-scoring/part-2",
  "day-10-syntax-scoring/part-2-golf",
  "day-11-dumbo-octopus",
  "day-12-passage-pathing/idiomatic",
  "day-12-passage-pathing/golf",
  "day-13-transparent-origami/idiomatic",
  "day-13-transparent-origami/golf",
  "day-14-xtended-polymerization",
  "day-15-chiton/idiomatic",
  "day-15-chiton/golf",
  "day-16-packet-decoder",
  "day-17-trick-shot/part-1",
  "day-17-trick-shot/part-2",
  "day-18-snailfish",
  "day-19-beacon-scanner",
  "day-20-trench-map",
  "day-21-dirac-dice",
  "day-22-reactor-reboot",
  "day-23-amphipod",
  "day-24-arithmetic-logic-unit/part-1",
  "day-24-arithmetic-logic-unit/part-2",
  "day-25-sea-cucumber",
]

[profile.release]
lto = "fat"
codegen-units = 1
